--- a/scss/card.scss
+++ b/scss/card.scss
@@ -3,64 +3,63 @@
 
 
 .testimonial-grid{
-    width: clamp(375px, 80%, 1440px);
+    width: clamp(375px, 80%, 1110px);
     display: grid;
     align-items: center;
-    justify-content: center;
-    gap: 1.75rem;
-    margin: 2rem 0;
-    grid-template-areas: 
-    "a"
-    "b"
-    "c"
-    "d"
-    "e";
+    justify-items: center;
+    
+    gap: 1.75em;
+    margin: 2em 0;
     & :nth-child(1) {
-        grid-area: a; 
+      grid-area: a;
     }
     & :nth-child(2) {
-        grid-area: b;
+      grid-area: b;
     }
-    & :nth-child(3) { 
-        grid-area: c;
+    & :nth-child(3) {
+      grid-area: c;
     }
     & :nth-child(4) {
-        grid-area: d;
+      grid-area: d;
     }
     & :nth-child(5) {
-        grid-area: e;
+      grid-area: e;
     }
-
-    @include lg{
-        .testimonial{
-            width: auto;
-        }
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-areas: 
+    
+    @include lg {
+      .card {
+        width: auto;
+      }
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-areas:
         "a a b e"
         "c d d e";
     }
+  }
     
-}
+
 
 .testimonial{
-    display: flex;
-    flex-direction: column;
-    padding: 2em;
-    position: relative;
-    width: max(375px);
-    height: 100%;
     border-radius: 10px;
-    gap: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  padding: 1.5em;
+  position: relative;
+  width: max(327px, 80%);
+  height: 100%;
     
     @include lg {
         width: 100%;
     }
     
    .identity{
-    display: flex;
     align-items: center;
-    gap: 1.2em;
+    font-size: 1rem;
+    font-weight: 600;
+    z-index: 3;
+    display: flex;
+    gap: 1em;
 
 
     img{
@@ -77,6 +76,7 @@
    }
 
    .comment{
+    line-height: 1.25em;
     font-weight: v.$fw-6;
     font-size: 1.5rem;
     
@@ -84,8 +84,8 @@
 
 .quote{
     opacity: 70%;
-    line-height: 1.5rem;
-    font-size: 1.1rem;
+  
+    font-size: 1rem;
 }
 
 }
@@ -95,6 +95,6 @@
  background-repeat: no-repeat;
  background-position: 19em top;   
  @include lg{
-    background-position: 30rem top;
+    background-position: 28rem top;
  }    
 }
