--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -12,6 +12,9 @@ body {
     background-color: hsl(210, 46%, 95%);
     display: flex;
     justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    
   }
   
   html {
